--- a/app/src/main/res/layout/grammar_obj_title.xml
+++ b/app/src/main/res/layout/grammar_obj_title.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border4blue"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="false"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="4dp"
     android:padding="@dimen/list_item_padding"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     android:focusable="false">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
 
     <ImageView
         android:id="@+id/favourite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
         android:src="@drawable/grammar_icon" />
     <ImageView
         android:id="@+id/next_icon"
@@ -46,5 +57,5 @@
         android:textSize="@dimen/grammar_title_text_size"
         android:textStyle="normal" />
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
